# Pergunte_russel

./: app.py  pyproject.toml
.devcontainer/: devcontainer.json
pergunte_russel/: app.py  base.xlsx
pertunte_russel/: app.py
